2005-07-04
	* special thanks to Citizen_X and his patience
	* Citizen_X pwns
	* keep shakin' those big 'ol titties
	* Citizen_X
	* Citizen_X
	* Citizen_X
	* Citizen_X

2005-07-03
	* many small fixes, thanks to those who reported problems

2005-07-02
	* dramatically improved how conky handles fonts
	* fixed issues with graph args
	* fixed shades and outlines

2005-07-01
	* stabilized code
	* added gradients to graphs (very pretty)
	* things
	* added $font, yay
	* feature freeze; only bugfixes now

2005-07-30
	* finalized graphing code, see $cpugraph, $memgraph, $execgraph,
	$downspeedgraph, and $upspeedgraph
	* added override_utf8_locale option
	* poop
	* $tab patch from jack_mort on f.g.o

2005-07-28
	* Added new graphing code, such as $cpugraph
	* small fixes all round
	* stuff
	* things
	* added more mpd objects

2005-07-24
	* Conky now has UTF-8 support
	* Fixed $freq for those with CPU scaling
	* Fixed the problem with total_run_times
	* Fixed alignment of bars and lines and stuff
	* Reduced conky's memory usage (yay!)
	* Removed top_sort_cpu, added top_mem which sorts by mem usage instead
	of cpu

2005-07-17
	* Fixed a pile of bugs in configure script
	* Added proper checking for headers in configure script
	* Made METAR shit threaded so it would stop being retarded, also made
	it try more then once to update
	* Added $metar_tempf and ${i2c tempf} for americans

2005-07-16
	* Added option for Conky to update N times and quit, see
	total_run_times in conkyrc.sample
	* Added metar code for weather info, thanks to somebody on sf.net
	* Added $alignr and $alignc for right and centre alignment
	* Added wireless info and IP addr patch, thanks Bobby Beckmann,
	options $addr and $linkstatus (please test!), as well as fixed a mem
	leak in this patch
	* adt746x fix, thanks to dan-h on sf.net
	* Added mldonkey support patch, thanks Lucas Brutschy on sf.net 
	* Added patch to allow hex colour values, thanks roiban adi on sf.net