@@ -1,3 +1,7 @@
+2005-07-05
+	* small fixes
+	* added CVS ebuild, huge thanks to Hopeless for this
+
 2005-07-04
 	* special thanks to Citizen_X and his patience
 	* Citizen_X pwns
